forum-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: danilomarcus/forum-app:v1
        ports:
        - containerPort: 9000
