forum-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-web
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: backend
        image: danilomarcus/forum-web:v1
        ports:
        - containerPort: 80
