ingress-basic.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: web-ip
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-staging
spec:
  # tls:
  #   - secretName: web-ssl
  #     hosts:
  #       - danilomarcusti.com.br
  # defaultBackend:
  #   service:
  #     name: web
  #     port:
  #       number: 80
  tls:
    - secretName: web-ssl
      hosts:
        - danilomarcusti.com.br      
  ingressClassName: nginx-example
  rules:
  - host: danilomarcusti.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
